--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -36,7 +36,7 @@ import RepositoryCard from "@/components/mdx/RepositoryCard.astro";
       </h2>
 
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        <RepositoryCard repo="sixday-C/my-learning-notes" />
+        <RepositoryCard repo="sixday-C/sixdayC" />
       </div>
 
       <div class="flex justify-center mt-10">
