--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,7 +22,7 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
             class="w-32 h-32 md:w-40 md:h-40 rounded-xl ring ring-primary ring-offset-base-100 ring-offset-2 overflow-hidden"
           >
             <img
-              src="https://github.com/EveSunMaple.png"
+              src="profile.webp"
               alt="SunMaple"
               width="160"
               height="160"
