--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
 
 <BaseLayout title="Home">
   <MainCard
-    title="Hi, I'm sixdayC"
-    description="我时常觉得自己很健忘：忘记了一些人和事，忘记了自己从哪里来、又要到哪里去。所以我给我自己写了一个博客、一个`不受控制`的博客、一个`只属于我`的博客，让我可以写点东西、记点东西，不至于把过去忘得一干二净。--SunMaple"
+    title="Hi, I'm sixdayC!欢迎来到我的小站🎇"
+    description="carpe diem, seize the day!"
     textOverlay="HOME"
     infoIcon="lucide:info"
   >
@@ -17,10 +17,12 @@ import GitHubStats from "@/components/mdx/GitHubStats.astro";
       <h1
         class="text-4xl font-bold mb-4 bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent"
       >
-        🌟 Frosti Blog Theme
+        🌟 你好鸭(≧▽≦)
       </h1>
       <p class="text-xl text-base-content/80 max-w-3xl mb-8">
-        我时常觉得自己很健忘：忘记了一些人和事，忘记了自己从哪里来、又要到哪里去。所以我给我自己写了一个博客、一个`不受控制`的博客、一个`只属于我`的博客，让我可以写点东西、记点东西，不至于把过去忘得一干二净。--SunMaple
+        我时常觉得自己很健忘：忘记了一些人和事，忘记了自己从哪里来、又要到哪里去。
+        所以我给我自己写了一个博客、一个`不受控制`的博客、一个`只属于我`的博客，
+        让我可以写点东西、记点东西，不至于把过去忘得一干二净。 --SunMaple
       </p>
     </div>
   </MainCard>
