--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -7,6 +7,7 @@ import { type CollectionEntry, getCollection } from "astro:content";
 import dayjs from "dayjs";
 import { DATE_FORMAT } from "@config";
 import MainCard from "@/components/MainCard.astro";
+import Waline from "@components/widgets/Waline.astro";
 
 export async function getStaticPaths() {
   const posts = await getCollection("blog");
@@ -53,6 +54,12 @@ const displayDate = blog.data.pubDate ? dayjs(blog.data.pubDate).format(DATE_FOR
           word={remarkPluginFrontmatter.totalCharCount}
           time={remarkPluginFrontmatter.readingTime}
         />
+
+        <!-- 添加评论系统 -->
+        <div class="mt-8">
+          <h2>Comments</h2>
+          <Waline path={blog.slug} />
+        </div>
       </div>
     </div>
   </MainCard>
