--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -57,8 +57,8 @@ const displayDate = blog.data.pubDate ? dayjs(blog.data.pubDate).format(DATE_FOR
 
         <!-- 添加评论系统 -->
         <div class="mt-8">
-          <h2>Comments</h2>
-          <Waline path={blog.slug} />
+          <h2>评论</h2>
+          <Waline path={`/blog/${blog.slug}`} />
         </div>
       </div>
     </div>
