--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -57,7 +57,7 @@ const displayDate = blog.data.pubDate ? dayjs(blog.data.pubDate).format(DATE_FOR
 
         <!-- 添加评论系统 -->
         <div class="mt-8">
-          <h2>评论</h2>
+          <h2>Comment</h2>
           <Waline path={`/blog/${blog.slug}`} />
         </div>
       </div>
