--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -9,7 +9,7 @@ import RepositoryCard from "@/components/mdx/RepositoryCard.astro";
 <BaseLayout title="Projects">
   <MainCard
     title="Projects"
-    description="A showcase of my open-source projects and contributions on GitHub."
+    description="A showcase of my projects and contributions on GitHub."
     textOverlay="PROJECTS"
     infoIcon="lucide:code-2"
   >
@@ -22,7 +22,7 @@ import RepositoryCard from "@/components/mdx/RepositoryCard.astro";
 
       <GitHubStats
         username="sixday-C"
-        repositoryName="sixdayC"
+        repositoryName="2025_4C"
         showLanguages={true}
         showContributors={true}
       />
@@ -37,6 +37,10 @@ import RepositoryCard from "@/components/mdx/RepositoryCard.astro";
 
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
         <RepositoryCard repo="sixday-C/sixdayC" />
+      </div>
+
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+        <RepositoryCard repo="sixday-C/cat_snake" />
       </div>
 
       <div class="flex justify-center mt-10">
