--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
       <h1
         class="text-4xl font-bold mb-4 bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent"
       >
-        🌟 你好鸭(≧▽≦)！ 
+        🌟 你好鸭(≧▽≦)！
       </h1>
       <h1
         class="text-4xl font-bold mb-4 bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent"
@@ -42,9 +42,19 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
         </p>
         <footer class="mt-4 text-right">—— SunMaple</footer>
       </blockquote>
-      <div class="flex justify-center space-x-4 mt-6">
-        <LinkCard href="https://www.sixdayc.top/blog" title="我的博客" desc="查看我的博客文章" icon="lucide:book" />
-        <LinkCard href="https://www.sixdayc.top/about" title="关于我" desc="了解更多关于我" icon="lucide:user" />
+      <div class="flex flex-row gap-4 mt-4 justify-center">
+        <LinkCard
+          title="我的博客"
+          desc="查看我的博客文章"
+          url="https://www.sixdayc.top/blog"
+          icon="lucide:book"
+        />
+        <LinkCard
+          url="https://www.sixdayc.top/about"
+          title="关于我"
+          desc="了解更多关于我"
+          icon="lucide:user"
+        />
       </div>
     </div>
   </Card>
