--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -9,7 +9,7 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
 <BaseLayout title="Friends">
   <MainCard
     title="Friends & Resources"
-    description="A collection of links to friends, technologies, and contributors to the Frosti project."
+    description="待添加~"
     textOverlay="FRIENDS"
     infoIcon="lucide:link"
   >
