--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -25,8 +25,15 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
           <FriendCard
             name="SunMaple"
             avatar="https://github.com/EveSunMaple.png"
-            description=""
+            description="Coding is my hobby, not my career."
             url="https://github.com/EveSunMaple"
+            type="friend"
+          />
+          <FriendCard
+            name="Nelson"
+            avatar="https://github.com/bosswnx.png"
+            description="一直游到海水變藍."
+            url="https://nelsonboss.ink/"
             type="friend"
           />
         </div>
