--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -36,6 +36,13 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
             url="https://nelsonboss.ink/"
             type="friend"
           />
+          <FriendCard
+            name="DM-X~X~X"
+            avatar="https://dmx20070206.github.io/"
+            description="理论可行，实践开始."
+            url="https://dmx20070206.github.io/"
+            type="friend"
+          />
         </div>
       </section>
     </div>
