--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -38,7 +38,7 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
           />
           <FriendCard
             name="DM-X~X~X"
-            avatar="https://dmx20070206.github.io/"
+            avatar="https://github.com/dmx20070206.png"
             description="理论可行，实践开始."
             url="https://dmx20070206.github.io/"
             type="friend"
