--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -43,6 +43,13 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
             url="https://dmx20070206.github.io/"
             type="friend"
           />
+          <FriendCard
+            name="YOO_koishi"
+            avatar="https://github.com/YOOkoishi.png"
+            description="Code Create Life."
+            url="http://www.yookoishi.com/"
+            type="friend"
+          />
         </div>
       </section>
     </div>
