--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -23,6 +23,13 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
 
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
           <FriendCard
+            name="1131DNA"
+            avatar="https://github.com/1131DNA.png"
+            description="Eternal Summer"
+            url="https://github.com/1131DNA"
+            type="friend"
+          />
+          <FriendCard
             name="SunMaple"
             avatar="https://github.com/EveSunMaple.png"
             description="Coding is my hobby, not my career."
