--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -43,7 +43,7 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
         <div class="flex-1 text-center md:text-left">
           <h1 class="text-3xl md:text-4xl font-bold mb-2">sixdayC</h1>
           <p class="text-xl text-base-content/80 mb-4">
-            infp 足球 阅读 科幻 自由学习 cs Anki.
+            infp 足球 汉密尔顿 科幻 自由学习 cs Anki.
           </p>
 
           <div
