--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -8,7 +8,7 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
 
 <BaseLayout title="Friends">
   <MainCard
-    title="Friends & Resources"
+    title="Friends"
     description="待添加~"
     textOverlay="FRIENDS"
     infoIcon="lucide:link"
