--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,8 +36,8 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
           我时常觉得自己很健忘：忘记了一些人和事，忘记了自己从哪里来、又要到哪里去。
         </p>
         <p>
-          所以我给我自己写了一个博客、一个<em>“不受控制”</em>的博客、一个<em
-            >“只属于我”</em
+          所以我给我自己写了一个博客、一个<em>『不受控制』</em>的博客、一个<em
+            >『不受控制』</em
           >的博客， 让我可以写点东西、记点东西，不至于把过去忘得一干二净。
         </p>
         <footer class="mt-4 text-right">—— SunMaple</footer>
