--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
         </p>
         <p>
           所以我给我自己写了一个博客、一个<em>『不受控制』</em>的博客、一个<em
-            >『不受控制』</em
+            >『只属于我』</em
           >的博客， 让我可以写点东西、记点东西，不至于把过去忘得一干二净。
         </p>
         <footer class="mt-4 text-right">—— SunMaple</footer>
