--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -57,6 +57,13 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
             url="http://www.yookoishi.com/"
             type="friend"
           />
+          <FriendCard
+            name="Fridemn"
+            avatar="https://fridemn.best/upload/%E5%9B%BE%E5%B1%82%201.png"
+            description="Don’t look back, there is nowhere to go but forward"
+            url="https://fridemn.best/"
+            type="friend"
+          />
         </div>
       </section>
     </div>
