--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -64,6 +64,13 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
             url="https://fridemn.best/"
             type="friend"
           />
+          <FriendCard
+            name="Kevin Wong"
+            avatar="https://avatars.githubusercontent.com/u/30772570?v=4"
+            description="Je veux des clartés pleines de rayonnements"
+            url="https://kevin56348.github.io/blog/"
+            type="friend"
+          />
         </div>
       </section>
     </div>
