--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -71,6 +71,13 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
             url="https://kevin56348.github.io/blog/"
             type="friend"
           />
+          <FriendCard
+            name="SaZiKK"
+            avatar="https://sazikk.top/assets/figures/avatar.jpg"
+            description="Explore never ends"
+            url="https://sazikk.top/"
+            type="friend"
+          />
         </div>
       </section>
     </div>
