--- a/src/pages/friend.astro
+++ b/src/pages/friend.astro
@@ -78,6 +78,13 @@ import FriendCard from "@/components/mdx/FriendCard.astro";
             url="https://sazikk.top/"
             type="friend"
           />
+          <FriendCard
+            name="wdlin"
+            avatar="https://avatars.githubusercontent.com/u/59403262?v=4"
+            description=" "
+            url="https://wdlin233.github.io/"
+            type="friend"
+          />
         </div>
       </section>
     </div>
