--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
       <h1
         class="text-4xl font-bold mb-4 bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent"
       >
-        🌟 你好鸭(≧▽≦)！
+        🌟 你好呀~ (≧▽≦)
       </h1>
       <h1
         class="text-4xl font-bold mb-4 bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent"
