--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -88,7 +88,7 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
                 {
                   date: "March 2025",
                   title: "第一个完整的团队游戏",
-                  desc: "806-GD的小伙伴们一起开发了《神州物理录》",
+                  desc: '806-GD的小伙伴们一起开发了《神州物理录》，<a href="https://www.bilibili.com/video/BV1tALUzzExY/?spm_id_from=333.337.search-card.all.click&vd_source=d5be0a99ae786efb89fd911a7a861a82" target="_blank" class="text-blue-500 underline">点击查看详情</a>',
                 },
               ].map((item, i) => (
                 <div class="relative flex gap-4 pb-2 md:pb-0 md:min-w-[250px]">
