--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,12 +36,14 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
         desc="查看我的博客文章"
         url="https://www.sixdayc.top/blog"
         icon="lucide:book"
+        target="_self"
       />
       <LinkCard
         url="https://www.sixdayc.top/about"
         title="关于我"
         desc="了解更多关于我"
         icon="lucide:user"
+        target="_self"
       />
     </div>
 
@@ -51,12 +53,14 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
         title="友链"
         desc="查看我的朋友们"
         icon="lucide:link"
+        target="_self"
       />
       <LinkCard
-        url="https://www.sixdayc.top/guestbook"
+        url="/board"
         title="留言板"
         desc="给我留言吧！"
         icon="lucide:message-square"
+        target="_self"
       />
     </div>
   </Card>
