--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -22,11 +22,23 @@ interface Props {
 
 const { blog } = Astro.props;
 const { Content, remarkPluginFrontmatter, headings } = await blog.render();
-const displayDate = blog.data.pubDate ? dayjs(blog.data.pubDate).format(DATE_FORMAT) : "";
+const displayDate = blog.data.pubDate
+  ? dayjs(blog.data.pubDate).format(DATE_FORMAT)
+  : "";
 ---
 
-<BaseLayout title={blog.data.title} image={blog.data.image} headings={headings} showTOC={true}>
-  <MainCard title={blog.data.title} description={blog.data.description} image={blog.data.image} infoIcon="lucide:info">
+<BaseLayout
+  title={blog.data.title}
+  image={blog.data.image}
+  headings={headings}
+  showTOC={true}
+>
+  <MainCard
+    title={blog.data.title}
+    description={blog.data.description}
+    image={blog.data.image}
+    infoIcon="lucide:info"
+  >
     <!-- Article info using PostInfo component -->
     <PostInfo
       pubDate={displayDate}
@@ -42,7 +54,10 @@ const displayDate = blog.data.pubDate ? dayjs(blog.data.pubDate).format(DATE_FOR
 
     <!-- Article Content -->
     <div class="mt-8">
-      <div id="content" class="prose max-w-none prose-headings:scroll-mt-20 prose-img:rounded-xl prose-img:mx-auto">
+      <div
+        id="content"
+        class="prose max-w-none prose-headings:scroll-mt-20 prose-img:rounded-xl prose-img:mx-auto"
+      >
         <Content />
         <License
           title={blog.data.title}
@@ -54,13 +69,12 @@ const displayDate = blog.data.pubDate ? dayjs(blog.data.pubDate).format(DATE_FOR
           word={remarkPluginFrontmatter.totalCharCount}
           time={remarkPluginFrontmatter.readingTime}
         />
-
-        <!-- 添加评论系统 -->
-        <div class="mt-8">
-          <h2>Comment</h2>
-          <Waline path={`/blog/${blog.slug}`} />
-        </div>
       </div>
+    </div>
+    <!-- 添加评论系统 -->
+    <div class="mt-8">
+      <h2>Comment</h2>
+      <Waline path={`/blog/${blog.slug}`} />
     </div>
   </MainCard>
 </BaseLayout>
