--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,6 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
 
 <BaseLayout title="Home">
   <MainCard
-    title="Hi, I'm sixdayC!"
     description="carpe diem, seize the day!"
     textOverlay="HOME"
     infoIcon="lucide:info"
@@ -19,12 +18,12 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
       <h1
         class="text-4xl font-bold mb-4 bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent"
       >
-        🌟 你好呀~ (≧▽≦)
+        🌟 Hi~ សួស្តី (≧▽≦)
       </h1>
       <h1
         class="text-4xl font-bold mb-4 bg-gradient-to-r from-primary to-secondary bg-clip-text text-transparent"
       >
-        我是sixdayC，欢迎来到我的小站！
+        I'm sixdayC，welcome to my blog！
       </h1>
     </div>
   </MainCard>
