--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,8 +9,8 @@ import LinkCard from "@/components/mdx/LinkCard.astro";
 
 <BaseLayout title="About">
   <MainCard
-    title="About sixdayC"
-    description="意识到会不说再见地离别，才学会珍惜生命的每一天。"
+    title="About me"
+    description="sixday means 'six days in my first name' and C is my last name."
     textOverlay="ABOUT"
     infoIcon="lucide:user"
   >
