--- a/src/pages/board.astro
+++ b/src/pages/board.astro
@@ -7,18 +7,22 @@ import Waline from "@/components/widgets/Waline.astro";
     <div class="max-w-3xl mx-auto px-4 mt-12">
         <h1 class="text-3xl font-bold mb-2">Welcome to leave a message!</h1>
         <div class="text-base text-gray-500 mb-8" style="font-size: 0.95rem;">
-            留下QQ邮箱，可以使用QQ头像~
-            <br />
-            或者在
-            <a
-                href="https://gravatar.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                class="underline text-blue-500 hover:text-blue-700"
-            >
-                Gravatar
-            </a>
-            设置头像~
+            <span style="font-size:0.92em;">
+                留下QQ邮箱，可以使用QQ头像~<br />
+                或者在
+                <a
+                    href="https://gravatar.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="underline text-blue-500 hover:text-blue-700"
+                >
+                    Gravatar
+                </a>
+                设置头像~<br />
+                <span style="font-size:0.9em;color:#888;"
+                    >（看不到评论试试刷新一下~）</span
+                >
+            </span>
         </div>
         <Waline path="/board" />
     </div>
