--- a/src/pages/board.astro
+++ b/src/pages/board.astro
@@ -4,7 +4,7 @@ import Waline from "@/components/widgets/Waline.astro";
 ---
 
 <BaseLayout title="board">
-    <div class="max-w-3xl mx-auto px-4 mt-12">
+    <div class="w-full max-w-screen-lg mx-auto px-4 mt-12">
         <h1 class="text-3xl font-bold mb-2">Welcome to leave a message!</h1>
         <div class="text-base text-gray-500 mb-8" style="font-size: 0.95rem;">
             <span style="font-size:0.92em;">
