评论系统真的好了

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -94,9 +94,9 @@ const displayDate = blog.data.pubDate
   </div>
 </BaseLayout>
 
-<style is:global>
+<!-- <style is:global>
   /* Content styling for code */
   code {
     font-size: 0.875em;
   }
-</style>
+</style> -->
